cmake_minimum_required(VERSION 3.25)
project(Grind75)

set(CMAKE_CXX_STANDARD 14)

add_executable(Grind75
        BestTimeToBuyAndSellStock.cpp
        CloneGraph.cpp
        InvertBinaryTree.cpp
        MergeTwoSortedLists.cpp
        TwoSum.cpp
        ValidAnagram.cpp
        ValidPalindrome.cpp
        ValidParentheses.cpp EvalRPN.cpp ImplementTrie.cpp)
